tdf#152104 speed xls->ods convert part 1

we now have 16k columns, so storing a flat array of columns
where most of them are empty is bad for performance.
Rather store a sorted data-structure of all the ranges,
reduces time from > 5 mins to ~50s.

Change-Id: I92327daf06469c1b9d1f4c427b8ebf812641a8e6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169940
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins