sc/source/filter/xml/XMLStylesExportHelper.hxx
@@ -22,6 +22,7 @@
 #include <vector>
 #include <memory>
 #include <list>
+#include <set>
 
 #include <address.hxx>
 #include <com/sun/star/table/CellRangeAddress.hpp>
@@ -158,10 +159,7 @@ struct ScMyFormatRange
 
 class ScFormatRangeStyles
 {
-    typedef std::list<ScMyFormatRange>          ScMyFormatRangeAddresses;
-    typedef std::vector<ScMyFormatRangeAddresses> ScMyFormatRangeListVec;
-
-    ScMyFormatRangeListVec      aTables;
+    std::multiset<ScMyFormatRange>   maFormatRanges;
     std::vector<OUString>       aStyleNames;
     std::vector<OUString>       aAutoStyleNames;
     const ScMyDefaultStyleList* pColDefaults;
@@ -171,7 +169,6 @@ public:
     ~ScFormatRangeStyles();
 
     void SetColDefaults(const ScMyDefaultStyleList* pDefaults) { pColDefaults = pDefaults; }
-    void AddNewTable(const sal_Int32 nTable);
     bool AddStyleName(const OUString& rString, sal_Int32& rIndex, const bool bIsAutoStyle = true);
     sal_Int32 GetIndexOfStyleName(std::u16string_view rString, std::u16string_view rPrefix, bool& bIsAutoStyle);
     // does not delete ranges
@@ -185,7 +182,6 @@ public:
     void AddRangeStyleName(const css::table::CellRangeAddress& rCellRangeAddress, const sal_Int32 nStringIndex,
                     const bool bIsAutoStyle, const sal_Int32 nValidationIndex, const sal_Int32 nNumberFormat);
     OUString& GetStyleNameByIndex(const sal_Int32 nIndex, const bool bIsAutoStyle);
-    void Sort();
 };
 
 class ScColumnRowStylesBase
